  * Fix an issue that prevented error messages from being correctly reported on
    the Special:Maintenance page.
  * Resolve a problem that prevented __TOC__ tags within tables from being
    processed.  Reported by an anonymous user.
  * Wiki table captions now process table CSS such as |+align="bottom"|caption.
    Reported by an anonymous user.


0.6.5
=====

New Features:

  * Support added for Sybase ASA (dallas).
  * The spam filter will now also check descriptions for uploaded files in
    order to block spam from bots using this path.
  * Updated spam filter patterns.

Bugfixes:
  * Fix a problem that could cause HSQL to generate locking errors on context
    reload (dallas).
  * Resolve a problem that could cause database connection lockups during
    setup on MS SQL and some other databases.  Reported by multiple users, with
    significant debugging help provided by dallas.
  * Fix a regression that broke the Special:Manage page.  Bug reported with a
    suggested fix by tfschueller.
  * Fix a regression that broke the Special:Move page (dallas).
  * Resolve a logic error that prevented topics from being retrieved from the
    cache at appropriate times.  Pointed out by Jim.
  * The "Special" tab on the Special:Contributions page did not have the
    correct URL.  Reported by yesesnono.

Translation Updates:

  * Updated Hungarian translations (bdanee).


0.6.4
=====

New Features:

  * Update and reorganize the monolithic jamwiki project structure into the
    more modular jamwiki-core, jamwiki-web and jamwiki-war sub-projects.  As
    a result of this change it is now possible to use the JAMWiki parser as a
    standalone library.
  * Update the parser to generate syntax that more exactly matches the parsed
    HTML output of Mediawiki.
  * Significantly improve the JAMWiki unit-test coverage.
  * Ignore line feeds in diffs to prevent showing changes due only to file
    format differences.